<resources>
    <string name="app_name">유령집사</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="font_list">
        <item>나눔바른펜</item>
        <item>나눔 손글씨펜</item>
        <item>이롭게바탕</item>
        <item>미생</item>
        <item>강원교육모두</item>
        <item>온글잎의연체</item>
        <item>봉숭아틴트</item>
        <item>챠오츄르</item>
        <item>빨간우체통</item>
        <item>야체</item>
        <item>별나라달님</item>
    </string-array>
    <string-array name="emotionname">
        <item>오늘은 어떤 기분이었나요?</item>
        <item>누구와 함께 하루를 보냈나요?</item>
        <item>어디에서 하루를 보냈나요?</item>
        <item>무엇을 하며 하루를 보냈나요?</item>
        <item>오늘의 날씨는 어땠나요?</item>
        <item>수면시간을 기록해주세요.</item>

    </string-array>
    <string name="sleepselect_title">수면시간을 기록해주세요.</string>
    <string-array name="emotionCategory0">
        <item>매우좋음</item>
        <item>좋음</item>
        <item>보통</item>
        <item>나쁨</item>
        <item>매우나쁨</item>

    </string-array>
    <string-array name="emotionCategory1">
        <item>혼자</item>
        <item>가족</item>
        <item>친구</item>
        <item>연인</item>
        <item>반려동물</item>

    </string-array>
    <string-array name="emotionCategory2">
        <item>집</item>
        <item>학교</item>
        <item>직장</item>
        <item>카페</item>
        <item>식당</item>
        <item>교통수단</item>
        <item>운동시설</item>
        <item>쇼핑몰</item>
        <item>영화관</item>
        <item>도서관</item>

    </string-array>
    <string-array name="emotionCategory3">
        <item>산책</item>
        <item>공부</item>
        <item>운동</item>
        <item>일</item>
        <item>쇼핑</item>
        <item>그림</item>
        <item>독서</item>
        <item>술</item>
        <item>게임</item>
        <item>여행</item>
        <item>요리</item>
        <item>음악</item>

    </string-array>
    <string-array name="emotionCategory4">
        <item>맑음</item>
        <item>구름</item>
        <item>비</item>
        <item>눈</item>
        <item>바람</item>

    </string-array>
    <string name="postdiary_title">오늘의 기록</string>
    <string name="advice_tilte">어떤 감정 때문에 힘들었나요?</string>
    <string name="advice_cate1">불안</string>
    <string name="advice_cate2">피로</string>
    <string name="advice_cate3">우울</string>
    <string name="advice_cate4">스트레스</string>
    <string name="advice_cate5">좌절</string>
    <string name="advice_cate6">자존감</string>
    <string-array name="advice_category">
        <item>불안</item>
        <item>피로</item>
        <item>우울</item>
        <item>스트레스</item>
        <item>좌절</item>
        <item>자존감</item>
    </string-array>
    <string name="analyze_failed">충분한 데이터가 없어서 분석이 어려워요.\n\n 유령을 5개 이상 선택해주세요</string>
    <string name="analyze_sleep_failed">충분한 데이터가 없어서 분석이 되지 않아요.\n\n수면시간이 5일 이상 입력되어야해요</string>
    <string name="todaycookie_title">오늘의 유령쿠키를 골라보세요.</string>
    <string name="selectAdvicecookie_title">"도움될만한 말을 쿠키에 적어놨어요.\n하나 골라볼래요?"</string>
    <string name="please_input_title">제목을 입력해주세요.</string>
    <string name="please_input_memo">메모을 입력해주세요.</string>
    <string name="please_input_text">내용을 입력해주세요.</string>
    <string name="select_emotion_edit">수정</string>
    <string name="select_emotion_compl">완료</string>
    <string name="alarm_text">오늘도 하루를 기록해볼까요?</string>
    <string name="analyzetabname00">종합분석</string>
    <string name="analyzetabname01">세부분석</string>
    <string name="analyzetabname02">수면분석</string>
    <string-array name="analyze_tabtitle">
        <item>종합분석</item>
        <item>세부분석</item>
        <item>수면분석</item>
    </string-array>
    <string name="analyzetab00_title">"종합분석  "</string>
    <string name="analyzetab00_title2">"평균점수  "</string>
    <string name="analyzetab00_happy">은(는) 당신을 가장 행복하게 하고,</string>
    <string name="analyzetab00_bad1">은(는) 당신을 가장 다운되게 해요.</string>
    <string name="analyzetab00_bad2">은(는) 가능한 피해보는게 어때요?</string>
    <string name="score">" 점"</string>
    <string name="analyzetab01_title">"세부분석  "</string>
    <string name="analyzetab01_pleaseselect">세부 분석할 활동을 선택 해주세요.</string>
    <string name="notSelect_emotion_analyze">분석할 활동이 선택되지 않았습니다.</string>
    <string name="please_select_ghost">유령을 골라주세요.</string>
    <string name="please_input_ghostname">유령의 이름을 입력해주세요.</string>
    <string name="analyzetab02_title">"수면분석  "</string>
    <string name="analyzetab02_title01">"추천 수면시간 "</string>
    <string name="analyzetab02_time00">잠든 시간</string>
    <string name="analyzetab02_time01">일어난 시간</string>
    <string name="analyzetab02_time02">수면 시간</string>
    <string name="analyzetab02_advice">규칙적인 수면시간은 신체와 정신 건강에 도움이 됩니다.</string>
    <string-array name="recommendedsleeptime">
        
        <item></item>
        <item>" 시에 자서  "</item>
        <item>" 시에 일어나는\n규칙적인 생활습관을 길러보면 어떨까요?"</item>
    </string-array>
    <string name="app_close_message">"\"'뒤로' 버튼을 한번 더 누르시면 종료됩니다.\""</string>
    <string name="please_input_password">비밀번호를 입력해 주세요</string>
    <string name="edit">수정</string>
    <string name="next">다음</string>
    <string name="jump">건너뛰기</string>
    <string name="start">시작</string>
    <string name="delete">삭제</string>
    <string name="title">제목</string>
    <string name="all">전체</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="search">검색</string>
    <string name="ok">확인</string>
    <string name="fontsetting_title">폰트 설정</string>
    <string name="addghost_title">커스텀 유령 추가</string>
    <string name="addghost_namehint">이름을 입력하세요</string>
    <string name="please_enter_again">한번 더 입력해 주세요</string>
    <string name="lock_sucess">입력하신 비밀번호로 잠금되었습니다.</string>
    <string name="wrong_password">입력하신 비밃 번호와 다릅니다, 다시 입력해주세요.</string>
    <string name="folderaddtitle">「폴더추가」</string>
    <string name="please_select_foldericon">폴더 아이콘을 골라주세요.</string>
    <string name="please_input_foldername1">폴더명을 입력하세요</string>
    <string name="please_input_foldername2">폴더명을 입력해주세요.</string>
    <string name="failed_AddingFolder">오류로 폴더가 추가되지 않았습니다.</string>
    <string name="folderedittitle">「폴더수정」</string>
    <string name="yearstring_last">년</string>
    <string name="navigationMenu_buy">이용권 구매</string>
    <string name="navigationMenu_lock">화면 잠금</string>
    <string name="navigationMenu_alarm">알림</string>
    <string name="navigationMenu_font">폰트</string>
    <string name="navigationMenu_service">소통창구</string>
    <string name="navigationMenu_service_link">\@ghostdiary.app</string>
    <string name="navigationMenu_hint">도움말</string>
    <string name="navigationMenu_updatenote">업데이트 노트</string>
    <string name="haveupdate_title">앱을 업데이트 해주세요!</string>
    <string name="haveupdate_content">소처럼 일해서 개선하고 있답니다\n٩(•̤̀ᵕ•̤́๑)૭✧</string>
    <string name="afterupdate_title">업데이트 노트</string>
    <string name="afterupdate_content">>유령 추가\n>폰트 변경\n>영어 추가</string>
    <string name="afterupdate_please">소처럼 일해서 개선하고 있답니다\n٩(•̤̀ᵕ•̤́๑)૭✧ 별점은 큰 힘이 됩니다!</string>
    <string name="afterupdate_close">닫기</string>
    <string name="afterupdate_review">별점주기</string>
    <string-array name="COMMONADVICE">
        <item>신경 쓰이는 것이 있다면 메모로 생각을 정리해보면 어떨까요?</item>
        <item>바느질 등의 수작업을 집중해서 하면 잡념을 없앨 수 있어요.</item>
        <item>스트레스가 크거나 화가 나면 ‘가짜 미소’를 지어보세요.</item>
        <item>어질러진 방을 정리해보세요. 단순한 정리 작업에 열중하면 부정적인 감정을 해소할 수 있어요.</item>
        <item>파란색은 신경을 안정시켜줘요. 기분이 좋지 않을 때는 파란색 옷을 입어보면 어떨까요?</item>
        <item>조용히 음악을 감상하거나 노래를 흥얼거려보세요.</item>
        <item>애완동물과 함께 보내는 시간을 늘려보세요.</item>
        <item>감정변화에는 사이클이 존재해요. 보통 5주 간격으로 고조기와 저조기가 반복돼요.</item>
        <item>가볍고 경쾌하게 걸어보세요.</item>
        <item>골치 아픈 일이 있다면, 종이에 그 일들을 쭉 써보고 각각의 해결방법과 기한을 적어보는게 도움될 수 있어요.</item>
        <item>신선한 과일과 채소를 많이 섭취해주세요.</item>
        <item>타인의 평가는 크게 중요하지 않아요.</item>
        <item>생각보다 남들은 당신에게 관심이 없어요.</item>
        <item>실패했다고 자신을 너무 몰아세우지 마세요.</item>
        <item>“이 또한 지나가리라.” 모든 일은 흘러가니 조금만 힘내세요.</item>
        <item>운동, 독서 등 미래를 위한 습관을 만들어보세요.</item>

    </string-array>
    <string-array name="불안">
        <item>불안할 땐 우선순위를 정해 우선순위가 높은 일부터 해보면 어떨까요?</item>
        <item>기분이 좋지 않을 때는 잠시라도 부정적인 정보를 멀리해보세요.</item>
        <item>초조했던 기억을 떠올리려 하면 연쇄적으로 초조함이 밀려온다는 연구결과가 있어요. 평소에는 초조한 기억을 떠올리는 걸 피해주세요.</item>
        <item>부정적인 감정이 들 때는 심호흡을 하거나 물을 마시며 잠시 쉬어 보세요.</item>
        <item>불안한 감정을 글로 써보면 마음이 안정될 수 있어요. 이 때 ‘라고 느낀다’ ‘라고 생각한다’와 같은 단어를 활용하면 효과는 두 배!</item>
        <item>긍정적인 말은 고통을 완화해줘요. 가능한 낙관적인 말을 사용하면 불안을 완화할 수 있어요.</item>
        <item>바로 지금 일어나는 일에 집중해 보세요. 불안은 미래에 집중하기 때문에 생겨나는 거니까요.</item>
        
    </string-array>
    <string-array name="피로">

        <item>마음이 지쳤을 때는 SNS 접속 시간을 줄이거나 한동안 끊어보세요.</item>
        <item>몸을 움직이지 않으면 더 피곤할 수 있다는 점을 알고 계셨나요? 오랜 시간 동안 움직이지 않았다면 가벼운 스트레칭을 해 보세요.</item>
        <item>30분 정도 따뜻한 햇살을 받아보세요.</item>
        <item>마그네슘, 비타민 D 등을 포함한 영양제를 섭취해 보세요.</item>
        <item>균형 잡힌 식사와 충분한 수분 섭취는 피로감 해소에 큰 도움이 돼요.</item>
        <item>좋은 질의 수면을 취하고 있나요? 수면 패턴을 한 번 점검해 보세요.</item>
        <item>지나친 카페인 섭취는 수면을 방해해 피로감을 줄 수 있어요.</item>
        <item>잠을 너무 많이 자면 오히려 피곤할 수 있어요. 오후 10시에서 오전 7시 사이에 7시간 내외로 자는 습관을 들여보세요.</item>
        <item>디지털 기기를 너무 자주 사용하는 것이 피곤함의 원인일 수 있어요. 디지털 기기의 사용을 조금씩 줄여보는 것은 어떨까요?</item>
        <item>휴일에도 제시간에 일어나야 규칙적인 생체 리듬을 유지할 수 있어요.</item>
        <item>욕조에 따뜻한 물을 채우고 몸을 푹 담가보세요. 혈액 순환을 촉진해 피로감을 풀어줄 수 있어요.</item>
        <item>카페인이 없는 허브차를 마셔보세요. 허브에는 피로감을 줄여주는 성분이 들어 있답니다.</item>
        <item>스트레칭을 자주 해주면 뭉친 곳을 풀어주고 혈액 순환을 촉진시킬 수 있어요.</item>
        <item>신선한 야채와 과일을 섭취하여 몸에 충분한 영양성분을 공급해 주세요.</item>
        <item>잠들기 전 3시간 전까지는 저녁 식사를 마쳐주세요. 야식은 위에 부담을 줄 수 있어요.</item>
        <item>아로마 향기 계열의 제품을 사용하여 심리적 안정을 취해보세요.</item>

    </string-array>
    <string-array name="우울">

        <item>이런저런 고민을 하기 전에 먼저 미소를 지어보면 어떨까요? 때로는 미소가 감정을 바꾸어 준답니다.</item>
        <item>“천 리 길도 한 걸음부터”라는 말이 있죠. 바른 방향으로 딱 한 걸음만 내딛어보세요.</item>
        <item>성취할 자신이 있는 목표를 세 가지만 세워 보세요. 구체적이고 의미 있는 장기 목표를 세우는 것은 행복에 한 걸음 다가가는 방법이랍니다.</item>
        <item>밤에는 부정적인 생각이 들기 쉬워요. 밤보다는 아침에 일기를 써보면 어떨까요?</item>
        <item>매일 한 시간 이상 야외에서 걸어보세요. 운동은 기분을 좋게 해주는 호르몬인 도파민과 세로토닌의 활성도를 높여 우울감을 완화해 줄 수 있어요.</item>
        <item>30분 정도 따뜻한 햇살을 받아보세요.</item>
        <item>불면증은 우울증을 악화시킬 수 있어요. 매일 같은 시간에 자고 일어나는 습관을 들여보세요.</item>
        <item>체온을 높이면 우울감을 완화할 수 있어요. 기분 전환할 겸 반신욕이나 사우나를 하러 가보는 건 어떨까요?</item>
        <item>오늘은 방을 깔끔하게 청소하고 집안을 꾸며보는 건 어떨까요?</item>
        <item>음악을 들으며 신나게 춤춰보세요. 아니면 노래방 어플을 켜고 시원하게 소리쳐 보세요. 스트레스가 확 풀릴지도 몰라요.</item>
        <item>아무나에게 연락해 만나서 그동안 못다한 이야기를 나눠보세요.</item>
        <item>내 도움이 필요한 누군가에게 조그만 도움의 손길을 내밀어보는 건 어떨까요? 봉사활동을 하며 뿌듯함을 느껴보세요.</item>
        <item>당신을 소중하게 여기는 사람이 많아요. 그들에게 당신의 마음을 털어놓아 보세요.</item>
        <item>우울한 사람들의 대부분이 수면 장애를 경험한다고 해요. 혹시 요즘 잠에 들기 힘들진 않았나요?</item>
        <item>영양섭취가 균형적이지 않으면 우울해지기 쉬워요. 식단을 점검해보는 시간을 가져보면 어떨까요?</item>
        <item>우울한 이유에 대해 정확히 알고 계시나요? 종이에 ‘내가 왜 우울한가’에 대해 쭉 써 내려가 보세요. 정확한 원인을 찾으면 감정을 조절하기 수월해질 수 있어요.</item>
        <item>가끔은 서점에 가서 끌리는 책을 읽어보세요.</item>
        
    </string-array>
</resources>