<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"

    android:background="#00000000"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="85dp"
        android:minHeight="32dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/folderaddtitle"
        android:textStyle="bold"
        android:background="@drawable/border_white"
        android:backgroundTint="#EBFFF6EF"


    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:minWidth="300dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_corners_allside"
        android:orientation="vertical"
        android:elevation="15dp"
        android:backgroundTint="#E0CAB8"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ghosts"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="#ffffff"

            />

        <EditText
            android:id="@+id/input_ghostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:textColor="@color/black"
            android:hint="@string/please_input_foldername2"
            android:singleLine="true"
            android:maxLength="30"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/tv_textcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8A000000"
            android:textSize="12sp"
            android:text="0/10"
            android:layout_gravity="right"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:orientation="horizontal">
            <TextView

                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/delete"
                android:textColor="@color/red2"
                android:layout_marginEnd="10dp"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>




    </LinearLayout>




</LinearLayout>