<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="300dp"

    android:theme="@style/AppThemeDialogUpdate"
    android:layout_gravity="center"


    android:minHeight="300dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"

        android:src="@drawable/ic_updatenote_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@id/imageView2"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="42dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textFontWeight="700"
            android:textStyle="bold"
            android:textColor="#001018"
            android:text="@string/afterupdate_title"

            />

        <TextView
            android:scrollbars="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textFontWeight="400"
            android:layout_weight="3"
            android:textSize="12sp"
            android:textColor="#001018"
            android:text="@string/afterupdate_content"

            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textFontWeight="300"

            android:textColor="#001018"
            android:text="@string/afterupdate_please"

            />

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"


            >
            <LinearLayout
                android:layout_width="200dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_close"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"

                    android:layout_gravity="left"
                    android:background="@drawable/border_corners_all_just_stroke"
                    android:gravity="center"
                    android:minWidth="70dp"
                    android:minHeight="30dp"

                    android:text="@string/afterupdate_close"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:singleLine="true"


                    />

                <TextView
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:id="@+id/tv_review"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"

                    android:background="@drawable/border_corners_all_black"
                    android:gravity="center"
                    android:minWidth="70dp"
                    android:minHeight="30dp"

                    android:text="@string/afterupdate_review"
                    android:textColor="#ffffff"
                    android:textSize="12sp"

                    />


            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>