<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/banner_analyze1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:scaleY="2"
        android:background="@color/transp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab00"
            android:layout_width="wrap_content"
            android:text="@string/analyzetabname00"
            android:layout_height="wrap_content"
            android:background="@color/transp"

            android:visibility="gone" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab01"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyzetabname01"

            android:background="@color/transp"

            android:visibility="gone"

            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab02"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/transp"
            android:text="@string/analyzetabname02"



            />

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"


        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:nestedScrollingEnabled="false"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </androidx.viewpager2.widget.ViewPager2>



</androidx.constraintlayout.widget.ConstraintLayout>